wrong branch: fixed alignments on show

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -45,3 +45,10 @@
   justify-content: center;
   align-items: center;
 }
+
+.btn-box-bottom {
+  margin-top: -45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
