--- a/app/assets/stylesheets/components/_line.scss
+++ b/app/assets/stylesheets/components/_line.scss
@@ -1,7 +1,8 @@
 .line{
   padding: 0px 12px 0px 12px;
-  background-color: red;
+  background-color: $red;
   width: 100%;
   height: 5px;
-  margin: 0px 0px 16px 0px
+  margin: 0px 0px 16px 0px;
+  margin-top: -5px;
 }
